Fix contact form and spacing

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -26,7 +26,9 @@
 }
 
 .nav {
-    background: #ba963a
+    background: #ba963a;
+    width: 100%;
+    position: fixed;
 }
 
 
